Getting rid of jaxb dependencies